<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="?android:attr/actionBarSize">
    <TableRow android:gravity="center_horizontal">
        <Button
            android:text="@string/Xs"
            android:id="@+id/Button01"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_Xs"
            >
        </Button>
        <Button
            android:text="@string/Xp"
            android:id="@+id/Button02"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_Xp">
        </Button>
    </TableRow>
    <TableRow android:gravity="center_horizontal">
        <Button
            android:text="@string/Ys"
            android:id="@+id/Button03"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_Ys">
        </Button>
        <Button
            android:text="@string/Yp"
            android:id="@+id/Button04"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_Yp">
        </Button>
    </TableRow>
    <TableRow android:gravity="center_horizontal">
        <Button
            android:text="@string/Zs"
            android:id="@+id/Button05"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_Zs">
        </Button>
        <Button
            android:text="@string/Zp"
            android:id="@+id/Button06"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_Zp">
        </Button>
    </TableRow>
    <TableRow android:gravity="center_horizontal">
        <Button
            android:text="@string/Rs"
            android:id="@+id/Button07"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_Rs">
        </Button>
        <Button
            android:text="@string/Rp"
            android:id="@+id/Button08"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_Rp">
        </Button>
    </TableRow>
    <TableRow android:gravity="center_horizontal">
        <Button
            android:text="@string/R1s"
            android:id="@+id/Button09"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_R1s">
        </Button>
        <Button
            android:text="@string/R1p"
            android:id="@+id/Button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_R1p">
        </Button>
    </TableRow>
    <TableRow android:gravity="center_horizontal">
        <Button
            android:text="@string/R2s"
            android:id="@+id/Button11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_R2s">
        </Button>
        <Button
            android:text="@string/R2p"
            android:id="@+id/Button12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_R2p">
        </Button>
    </TableRow>
        <TextView
            android:id="@+id/textStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/green"
            >
        </TextView>
</TableLayout>