<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.randy.xc.handle.DisplayMessageActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentEnd="true"
    android:id="@+id/display_message"
    >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText android:id="@+id/name"
            android:text="@string/name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            ></EditText>
        <EditText android:id="@+id/ip"
            android:text="@string/ip"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            ></EditText>
        <EditText android:id="@+id/status"
            android:text="@string/Status"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            ></EditText>
    </TableRow>

</TableLayout>

